# TODO_CLI

./: .gitignore  README.md  cli.py  main.py  pyproject.toml  task.py  tasks.json  test_task.py
src/: main.py
todo/: task.py
