[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-cli"
version = "0.1.0"
description = "Task Tracker CLI that creates JSON task file"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.scripts]
task = "todo.task:main"

[tool.setuptools.packages.find]